pubs: FellWalker - add reference to figure 1

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -198,8 +198,8 @@ available pixel values above a stated threshold.
 
 The name ``Fell Walker'' relates to the popular British pass-time of
 walking up the hills and mountains of northern England, particularly
-those of the Lake District
-(\htmladdnormallink{http://en.wikipedia.org/wiki/Hillwalking}~), and was
+those of the Lake District (see Fig.~\ref{fig:wasdale} and
+\htmladdnormallink{http://en.wikipedia.org/wiki/Hillwalking}~), and was
 chosen to reflect the way in which the algorithm proceeds iteratively by
 following an upward path from a low-valued pixel to a significant summit
 or peak in data-value. The following description of the algorithm uses
