ast: fix a couple small typos in documentation

--- a/libraries/ast/sun_master.tex
+++ b/libraries/ast/sun_master.tex
@@ -14374,7 +14374,7 @@ f+
 AST\_SETC or AST\_SET).
 f-
 the file is opened and the headers copied from it into the FitsChan.
-The file is then imemdiately closed.
+The file is then immediately closed.
 
 c+
 \item You may specify a source function which reads data from some
@@ -14416,7 +14416,7 @@ which describe the Object (\secref{ss:readingnativefits}).
 f-
 
 \item You may assign a value to the FitsChan's SinkFile attribute. When
-the FitsCHan is deleted, any remaining headers are written out to a text
+the FitsChan is deleted, any remaining headers are written out to a text
 file with path equal to the value of the SinkFile attribute.
 
 c+
