pubs: FellWalker - more references to "clumpfind is bad" papers
And change the abstract to  say "fellWalker is better than clumpfind"

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -1,3 +1,51 @@
+@ARTICLE{2003Brunt,
+  author =       {Brunt, C.~M.  and Kerton, C.~R. and Pomerleau1, C.},
+  title =        "{An Outer Galaxy Molecular Cloud Catalog}",
+  journal =      {\apjs},
+  year =         2003,
+  volume =       144,
+  pages =        {47-70},
+  adsurl =       {http://adsabs.harvard.edu/abs/2003yCat..21440047B},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2007Elia,
+  author =       {{Elia}, D. and {Massi}, F. and {Strafella}, F. and {De Luca}, M. and {Giannini}, T. and {Lorenzetti}, D. and {Nisini}, B. and {Campeggio}, L. and {Maiolo}, B.~M.~T.},
+  title =        "{Mapping Molecular Emission in Vela Molecular Ridge Cloud D}",
+  journal =      {\apj},
+  year =         2007,
+  volume =       655,
+  pages =        {316-331},
+  doi =          {10.1086/509801},
+  adsurl =       {http://adsabs.harvard.edu/abs/2007ApJ...655..316E},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008Smith,
+  author =       {{Smith}, R.~J. and {Clark}, P.~C. and {Bonnell}, I.~A.},
+  title =        "{The structure of molecular clouds and the universality of the clump mass function}",
+  journal =      {\mnras},
+  year =         2008,
+  volume =       391,
+  pages =        {1091-1099},
+  doi =          {10.1111/j.1365-2966.2008.13970.x},
+  adsurl =       {http://adsabs.harvard.edu/abs/2008MNRAS.391.1091S},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009Kainulainen,
+  author =       {{Kainulainen}, J. and {Lada}, C.~J. and {Rathborne},
+                  J.~M. and {Alves}, J.~F.},
+  title =        "{On the fidelity of the core mass functions derived from dust column density data}",
+  journal =      {\aap},
+  year =         2009,
+  volume =       497,
+  pages =        {339-407},
+  doi =          {10.1051/0004-6361/200810987},
+  adsurl =       {http://adsabs.harvard.edu/abs/2009A%26A...497..399K},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{2014Christie,
   author =       {{Christie}, H. and
                   {Viti}, S. and
