pubs: Fellwalker - say more about how to get cupid up and running

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -218,13 +218,19 @@ Thorne, www.lakedistrict.gov.uk/learning/freephotos\# }
 \end{figure}
 
 An implementation of the FellWalker algorithm is included in the Starlink
-CUPID package \citep[][\ascl{1311.007}]{CupidAdass,SUN255}, together with
+\htmladdnormallinkfoot{CUPID}{http://starlink.jach.hawaii.edu/starlink/CUPID}
+package \citep[][\ascl{1311.007}]{CupidAdass,SUN255}, together with
 implementations of other clump-finding algorithms such as GaussClumps
 \citep[][\ascl{1406.018}]{1990ApJ...356..513S} and CLUMPFIND. In common
 with the rest of the Starlink software
 \citep[][\ascl{1110.012}]{StarlinkAdass}, the source code for the CUPID
 package is open-source and is available on
-\htmladdnormallinkfoot{Github}{https://github.com/Starlink}.
+\htmladdnormallinkfoot{Github}{https://github.com/Starlink}. Pre-built
+binaries for the complete Starlink software collection can be obtained
+from the \htmladdnormallinkfoot{Joint Astronomy Centre, Hawaii}
+{http://starlink.jach.hawaii.edu/starlink}. The native data format used
+by CUPID is the Starlink NDF \citep{2014Jenness}, but FITS data can be handled
+transparently by means of the Starlink CONVERT package \citep{SUN55}.
 
 \begin{figure}
 \includegraphics[width=\columnwidth]{fellwalking}
