--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -1,3 +1,12 @@
+@Article{2014Jenness,
+  author =       {Tim Jenness and others},
+  title =        "{Learning from 25 years of the extensible
+                  \emph{N}-Dimensional Data Format}",
+  journal =      {Astron.\ Comp.},
+  year =         {2014},
+  volume =       {submitted}
+}
+
 @ARTICLE{2003Brunt,
   author =       {Brunt, C.~M.  and Kerton, C.~R. and Pomerleau1, C.},
   title =        "{An Outer Galaxy Molecular Cloud Catalog}",
@@ -108,6 +117,15 @@
   title =        "{CUPID -- A 3D Clump Identification and Analysis Package}",
   howpublished = {Starlink User Note 255, Starlink Project, STFC},
   year =         2013,
+  url =          {http://www.starlink.ac.uk/star/docs/sun255.htx/sun255.html},
+}
+
+@Misc{SUN55,
+  author =       {{Currie}, M.~J and {Privett}, G.~J. and {Chipperfield}, A.~J. and {Berry}, D.~S. and {Davenhall}, A.~C.},
+  title =        "{CONVERT - A Format-conversion Package}",
+  howpublished = {Starlink User Note 55, Starlink Project, STFC},
+  year =         2014,
+  url =          {http://www.starlink.ac.uk/star/docs/sun55.htx/sun55.html},
 }
 
 @INPROCEEDINGS{StarlinkAdass,
