pubs: Stuff needed by A&C
Change figures from png to jpg. Remove unused references from bib file. Include extra keywords.

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -147,7 +147,7 @@ parameter settings than are those of CLUMPFIND.
 
 %% MSC codes here, in the form: \MSC code \sep code
 %% or \MSC[2008] code \sep code (2000 is the default)
-
+methods: data analysis \sep
 clump identification \sep
 Starlink
 
