--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -14,7 +14,8 @@
   year =         2003,
   volume =       144,
   pages =        {47-70},
-  adsurl =       {http://adsabs.harvard.edu/abs/2003yCat..21440047B},
+  doi =          {10.1086/344245},
+  adsurl =       {http://adsabs.harvard.edu/abs/2003ApJS..144...47B},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -25,6 +26,8 @@
   year =         2007,
   volume =       655,
   pages =        {316-331},
+  eprint =       {astro-ph/0610083},
+  archivePrefix = "arXiv",
   doi =          {10.1086/509801},
   adsurl =       {http://adsabs.harvard.edu/abs/2007ApJ...655..316E},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
@@ -37,6 +40,8 @@
   year =         2008,
   volume =       391,
   pages =        {1091-1099},
+  archivePrefix = "arXiv",
+  eprint =       {0809.2702},
   doi =          {10.1111/j.1365-2966.2008.13970.x},
   adsurl =       {http://adsabs.harvard.edu/abs/2008MNRAS.391.1091S},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
@@ -50,6 +55,8 @@
   year =         2009,
   volume =       497,
   pages =        {339-407},
+  archivePrefix = "arXiv",
+  eprint =       {0901.4207},
   doi =          {10.1051/0004-6361/200810987},
   adsurl =       {http://adsabs.harvard.edu/abs/2009A%26A...497..399K},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
@@ -81,6 +88,8 @@
   year =         2009,
   volume =       699,
   pages =        {L134-L138},
+  archivePrefix = "arXiv",
+  eprint =       {0906.0331},
   doi =          {10.1088/0004-637X/699/2/L134},
   adsurl =       {http://adsabs.harvard.edu/abs/2009ApJ...699L.134P},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
