pubs: FellWalker - another "cf splits sources" reference
Although obviously this reference makes no mention of FellWalker.

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -1,3 +1,33 @@
+@ARTICLE{2006Enoch,
+  author =       {{Enoch}, M.~L. and
+                  {Young}, K.~E. and
+                  {Glenn}, J. and
+                  {Evans}, N.~J. and
+                  {Golwala}, S. and
+                  {Sargent}, A.~I. and
+                  {Harvey}, P. and
+                  {Aguirre}, J. and
+                  {Goldin}, A. and
+                  {Haig}, D. and
+                  {Huard}, T.~L. and
+                  {Lange}, A. and
+                  {Laurent}, G. and
+                  {Maloney}, P. and
+                  {Mauskopf}, P. and
+                  {Rossinot}, P. and
+                  {Sayers}, J.},
+  title =        "{Bolocam Survey for 1.1 mm Dust Continuum Emission in the c2d Legacy Clouds. I. Perseus}",
+  journal =      {\apj},
+  year =         2006,
+  volume =       638,
+  pages =        {293-313},
+  eprint =       {astro-ph/0510202},
+  archivePrefix = "arXiv",
+  doi =          {10.1086/498678},
+  adsurl =       {http://adsabs.harvard.edu/abs/2006ApJ...638..293E},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @Article{2014Jenness,
   author =       {Tim Jenness and others},
   title =        "{Learning from 25 years of the extensible
