--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -536,7 +536,8 @@ different 2-dimensional clump finding algorithms, including FellWalker and CLUMP
 This concluded that, under the conditions used in the study, FellWalker
 is less likely than CLUMPFIND to split up large clumps, and is less
 likely to create false clump detections. A similar conclusion was reached
-by \cite{2014Christie} for 3-dimensional data.
+by \cite{2014Christie} for 3-dimensional data. The tendency for CLUMPFIND
+to split sources has also been noted by \cite{2006Enoch}.
 
 An independent illustration of this for 2-dimensional data is presented in
 Fig.~\ref{fig:comp1}, which shows a field of artificial Gaussian clumps,
