pubs: FellWalker - explain fig 5
In answer to a comment from Mark Thompson.

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -385,7 +385,9 @@ this data is shown in Fig.~\ref{fig:rawmask}.
 \includegraphics[width=\columnwidth]{rawmask}
 \caption{The raw clump mask created for the artificial data shown in
 Fig.~\ref{fig:sim}. Two clumps are found, indicated by the black and grey
-pixels.}
+pixels. Walks starting from the black pixels all terminate at the left
+hand peak, and walks starting from the grey pixels all terminate at the
+right hand peak.}
 \label{fig:rawmask}
 \end{figure}
 
