Docs: sc21 and sun258, minor tidying up.

--- a/applications/smurf/docs/sun258/sun258.tex
+++ b/applications/smurf/docs/sun258/sun258.tex
@@ -1,16 +1,12 @@
 \documentclass[oneside,11pt]{starlink}
-\usepackage[T1]{fontenc} 
-\usepackage[utf8]{inputenc}
-\usepackage{mathpazo}
 
 
 % ------------------------------------------------------------------------
-% Initial set up for htis
+% starlink set up
 \title{SUN/258}
 \stardoccategory  {Starlink User Note}
 \stardocinitials  {SUN}
 \stardoccopyright{Copyright \copyright\ 2012 University of British Columbia \& the Science \& Technology Facilities Council}
-% Variable part - replace [xxx] as appropriate.
 \stardocnumber    {258.3}
 \stardocsource    {sun\thestardocnumber}
 \stardocauthors   {Edward Chapin, Andrew G. Gibb, Tim Jenness, David S. Berry, Douglas Scott \& Remo Tilanus}
@@ -2078,7 +2074,7 @@ First official release supporting SCUBA-2 raw data (rather than simulated data).
 \newpage
 
 \appendix
-\renewcommand{\thesection}{\Alph{section}}%
+%\renewcommand{\thesection}{\Alph{section}}%
 
 \section{\xlabel{ap_summary}An Alphabetical Summary of SMURF Commands
 \label{ap:summary}}
