latexsupport: small fixes to latexsupport files for both pdflatex and tex4ht

--- a/applications/latexsupport/sst.sty
+++ b/applications/latexsupport/sst.sty
@@ -6,7 +6,7 @@
 
 
 %%% Create a new section class (at subsection level) for the sst routines
-\RequirePackage{titlesec}
+%\RequirePackage{titlesec}
 
 
 %...  New subsection sstrefsection
@@ -117,3 +117,4 @@
 \providecommand{\sstattributetype}[1]{\item[Type:]#1}
 
 
+\renewcommand{\wedge}{\mbox{\textasciicircum}}
